add mail to contact-btn

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Acapella & Nasheed artist, Sound Engineer and Entrepreneur</p> 
         <div class="header_button">
           <a href="#" onclick="aboutBtn()">About me</a>
-          <a href="#" onclick="contactBtn()">Contact me</a>
+          <a href="mailto:sarfaraznaheedbhaiya@gmail.com" onclick="contactBtn()">Contact me</a>
         </div>
       </div>
     </section>
