--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <a href="mailto:sarfaraznaheedbhaiya@gmail.com"><i class="fas fa-envelope"></i></a>
             <a href="https://songwhip.com/sarfaraznaheed">W</a>
            </div>
+           <h3>Founded Organization: Azmaeen Records</h3>
           </div>
           
           <div class="details col-lg-7 col-md-7 col-12">
