--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 
@@ -86,7 +86,7 @@
             <a href="mailto:sarfaraznaheedbhaiya@gmail.com"><i class="fas fa-envelope"></i></a>
             <a href="https://songwhip.com/sarfaraznaheed">W</a>
            </div>
-           <h3>Founded Organization: Azmaeen Records</h3>
+           <h3>Founded Organization: <br> Azmaeen Records</h3>
           </div>
           
           <div class="details col-lg-7 col-md-7 col-12">
@@ -290,7 +290,7 @@
 
   <!-- Project -->
   
-  <script src="main.js"></script>
+  <script src="index.js"></script>
   
   <script src="https://kit.fontawesome.com/29f6f01aca.js" crossorigin="anonymous"></script>
   
